# sparx-cipher

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
benches/: sparx.rs
src/: block.rs  lib.rs
tests/: vector.rs  vectors.rs
