[package]
name = "sparx-cipher"
version = "0.1.0"
authors = ["quininer <quininer@live.com>"]
description = "Another SPARX block cipher implementation for Rust"
repository = "https://github.com/quininer/sparx-cipher"
keywords = [ "block-cipher", "cryptography" ]
categories = [ "cryptography", "no-std" ]
license = "MIT"

[badges]
travis-ci = { repository = "quininer/sparx-cipher" }
appveyor = { repository = "quininer/sparx-cipher" }

[features]
default = [ "x128_128" ]
x64_128 = []
x128_128 = []
x128_256 = []
